# Conan-Qt-Cmake_MinGw-MSCV-Example

./: CMakeLists.txt  README.md  conanfile.py  main.cpp  mingw8_1_release32  mingw8_1_release64  vs_release  vs_release32
